--- a/2nd.html
+++ b/2nd.html
@@ -15,6 +15,7 @@
       <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Albert_Einstein_Head.jpg/450px-Albert_Einstein_Head.jpg">
        <div id="img-caption">Albert Einstain 1947</div>
     </div>
+    <section id="tribute">
         <ul id="tribute-info">
           <li>A pasifist</li>
           <li>A socialist</li>
@@ -22,3 +23,5 @@
         </ul>
       <h6> favorite personal read: Why socialism?</h6>
       <p>If you want to learn more visit <a id="tribute-link" target="_blank" href="https://es.wikipedia.org/wiki/Albert_Einstein">This link</a></p>
+    </section>
+</body>
